Iniciando ruta /usuarios/all para obtener todos los usuarios
